--- a/tutorials/R/AIS-data/L4-Discharge-Series/continuous-discharge-basic/continuous-discharge-intro-0.Rmd
+++ b/tutorials/R/AIS-data/L4-Discharge-Series/continuous-discharge-basic/continuous-discharge-intro-0.Rmd
@@ -1,5 +1,5 @@
 ---
-syncID: 
+syncID: d700a56bfb75438998b57b81d4436462
 title: "Introduction to the NEON Continuous Discharge Data Product"
 description: Tutorial introducing users to NEON's Level 4 Continuous data product (DP4.00130.001)
 dateCreated: '2025-08-08'
@@ -24,6 +24,6 @@ library(htmltools)
 
 ```{r html, echo=FALSE, warning=FALSE, message=FALSE}
 
-# htmltools::includeHTML("/Users/clunch/GitHub/NEON-Data-Skills/tutorials/R/NEON-general/neon-overview/NEON-download-explore/NEON-download-explore-content.html")
+htmltools::includeHTML("https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/refs/heads/main/tutorials/R/AIS-data/L4-Discharge-Series/continuous-discharge-basic/continuous-discharge-intro-content.html")
 
 ```
