--- a/tutorials/R/AOP/Hyperspectral/Field-Spectra/explore_field_spectra.Rmd
+++ b/tutorials/R/AOP/Hyperspectral/Field-Spectra/explore_field_spectra.Rmd
@@ -5,11 +5,11 @@ description: "Explore the field spectra data product, link field spectra to airb
 dateCreated: 2024-02-12
 authors: Bridget Hass
 contributors: Claire Lunch, Samantha Weintraub-Leff
-estimatedTime: 1.5 Hours
+estimatedTime: 1 Hour
 packagesLibraries: neonUtilities, geoNEON, neonOS, terra, rhdf5, ggplot2, dplyr, reshape2
-topics: hyperspectral, foliar traits, remote-sensing, reflectance
+topics: hyperspectral, foliar traits, remote-sensing, reflectance, canopy
 languagesTool: R
-dataProduct: DP1.30012.001, DP1.10026.001, DP3.30006.001
+dataProduct: DP1.30012.001, DP1.10026.001, DP3.30006.001, DP3.30006.002
 code1: https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/AOP/Hyperspectral/Field-Spectra/explore-field-spectra.R
 tutorialSeries: 
 urlTitle: explore-field-spectra
@@ -73,7 +73,7 @@ field_spectra_info <- neonUtilities::getProductInfo('DP1.30012.001')
 field_spectra_info$siteCodes$siteCode # list all available sites
 ```
 
-We can see that there are data available at 14 sites, as of the end of 2023.
+We can see that there are data available at 18 sites, as of the beginning of 2026.
 
 Now that we know what sites have this field spectral data, let's take a look at one of the sites as an example - <a href="https://www.neonscience.org/field-sites/rmnp" target="_blank">Rocky Mountain National Park (RMNP)</a> in Colorado. We'll use this site to demonstrate some exploratory analysis you might start with when working with the field spectral data. To load this data directly into R, you can use the `neonUtilities::loadByProduct` function, specifying the data product ID (dpID) and site. Since this product is collected fairly infrequently, to date there is only one collection per year of this for the subset of sites shown above, so specifying the year-month in addition to the site is not necessary. This data is not too large in volume, so it should be fine to set the option `check.size=FALSE`. You will need to set package="expanded" in order to include the actual field spectral data.
 
@@ -90,12 +90,12 @@ Let's take a look at all the associated tables contained in this data product, u
 ```{r field-spectra-names}
 names(field_spectra)
 ```
-We encourage looking at all of these tables to learn more about the data product, but you can find the actual data stored in the variables: `fsp_boutMetadata` (contains metadata information about this sampling bout), `fsp_sampleMetadata` (contains relevant metadata about the individual samples), `fsp_spectralData` (contains information about the individual sample data), and `per_sample` (contains the wavelength and reflectance data). Next, we can merge the `fsp_spectralData`, `fsp_sampleMetadata` and `per_sample` into a single data frame as follows. For more info on joining OS tables, please refer to https://www.neonscience.org/resources/learning-hub/tutorials/neonos-duplicates-joins.
+We encourage looking at all of these tables to learn more about the data product, but you can find the actual data stored in the variables: `fsp_boutMetadata` (contains metadata information about this sampling bout), `fsp_sampleMetadata` (contains relevant metadata about the individual samples), `fsp_spectralData` (contains information about the individual sample data), and `fsp_rawSpectra` (contains the wavelength and reflectance data). Next, we can merge the `fsp_spectralData`, `fsp_sampleMetadata` and `fsp_rawSpectra` into a single data frame as follows. For more info on joining OS tables, please refer to https://www.neonscience.org/resources/learning-hub/tutorials/neonos-duplicates-joins.
 
 ``` {r list2env, results="hide"}
 list2env(field_spectra, .GlobalEnv)
 spectra_data_metadata <- joinTableNEON(fsp_spectralData,fsp_sampleMetadata)
-spectra_data <- merge(spectra_data_metadata,per_sample,by="spectralSampleID")
+spectra_data <- merge(spectra_data_metadata,fsp_rawSpectra,by="spectralSampleID")
 ```
 
 You can use `View(spectra_data)` to see the contents of this dataframe, or alternatively you could just print the variable name. The code below displays all the column names of this dataframe. We'll just show the head (or first 6 rows) of this data frame here, including a few of the columns.
@@ -426,42 +426,37 @@ Why is there a difference between the leaf-clip spectra and the remotely-sensed 
 
 Each reflectance pixel represents a 1m x 1m area, so it contains an average spectra of all the vegetation and non-vegetation that are contained in that area. For example, a single pixel could contain the reflectance of a mix of leaves as well as branches, and any gaps in the tree canopy (eg. the ground under the tree). This averaging is called "spectral mixing" and you can perform "spectral un-mixing" to decompose an average spectra into it's component parts. These leaf clip spectra can be used as "end-members", in classification applications, for example. 
 
-Also, it is important to understand that there are uncertainties in the ASD measurements as well as the airborne spectra. There may be some geographic uncertainty associated with both the airborne data (which has 0.5 m horizontal resolution), as well as with the field sample geolocations. There is also some uncertainty in the spectral data itself. For example, there is uncertainty resulting from the atmospheric correction applied when generating the reflectance data from the at-sensor-radiance. Weather conditions during the flight are important to consider as well. The Airborne Observation Platform attempts to collect the coincident overflights in clear weather, but this may not always be the case. For more on hyperspectral uncertainties and variation, please refer to the <a href="https://data.neonscience.org/api/v0/documents/NEON.DOC.004365vB?inline=true" target="_blank">Spectrometer Mosaic ATBD</a> (Algorithm Theoretical Basis Document).
+In addition, there are uncertainties associated with both the ASD measurements as well as the airborne spectra. There may be some geographic uncertainty associated with both the airborne data (which has 0.5 m horizontal resolution), as well as with the field sample geolocations. There is also some uncertainty in the spectral data itself. For example, there is uncertainty resulting from the atmospheric correction applied when generating the reflectance data from the at-sensor-radiance. Weather conditions during the flight are important to consider as well. The Airborne Observation Platform attempts to collect the coincident overflights in clear weather, but this may not always be the case. For more on hyperspectral uncertainties and variation, please refer to the <a href="https://data.neonscience.org/api/v0/documents/NEON.DOC.004365vB?inline=true" target="_blank">Spectrometer Mosaic ATBD</a> (Algorithm Theoretical Basis Document) or the Python lesson <a href="https://www.neonscience.org/resources/learning-hub/tutorials/hyperspectral-variation-py" target="_blank">Hyperspectral Variation Uncertainty Analysis in Python</a> .
 
 ### Incorporating Tree Crown Polygon Shapefiles
 
-Starting in 2020 (including RMNP 2020), the foliar traits data products include shape files of the polygons of the tree crowns where the samples are taken from. The crown shapefiles are not available for all of the canopy foliar data, but if they are available, it is recommended to use them. The last part of the lesson demonstrates how to download the tree crown shape files, and plots the spectra of the airborne reflectance data of all the pixels inside the tree crown area. 
+Starting in 2020 (including RMNP 2020), the foliar traits data products include shape files of the polygons of the tree crowns where the samples are taken from. The crown shapefiles are not available for older (pre-2020) canopy foliar data, but if they are available, it is recommended to use them. The last part of the lesson demonstrates how to download the tree crown shape files, and plots the spectra of the airborne reflectance data of all the pixels inside the tree crown area. 
 
 First, we can use the `neonUtilities::loadByProduct` and `zipsByURI` functions to download all the tree crown polygon shapefile data, as follows. This is also the recommended way to determine which crown polygon data are available, across all the sites.
 
 ``` {r crown-poly, eval=FALSE, results="hide"}
 crown_polys <- loadByProduct(dpID='DP1.10026.001', 
-                          tabl='cfc_shapefile', 
-                          include.provisional=T,
-                          check.size=F)
+                             site='RMNP',
+                             tabl='cfc_shapefile', 
+                             include.provisional=T,
+                             check.size=F)
 zipsByURI(crown_polys, savepath=paste0(wd,'crown_polygons'),check.size=FALSE)
 ```
 
 Next we can read in the polygon data as a terra `SpatVector` object as follows. Display the coordinate reference system (CRS) information. You can un-comment the last line to display more detailed information about the CRS.
 
 ``` {r read-crown-poly-shp}
-shp_file <- paste0('~/data/','RMNP/RMNP-2020-polygons-v2/RMNP-2020-polygons.shp')
+shp_file <- paste0('~/data/','crown_polygons/RMNP-2020-polygons-v3/RMNP-2020-polygons.shp')
 rmnp_crown_poly <- terra::vect(shp_file)
 crs(rmnp_crown_poly, describe=TRUE) # display dataframe describing the CRS
 # cat(crs(rmnp_crown_poly), "\n")
 ```
-You can see that this data has EPSG code 3857, which does not match the AOP raster data, which is in UTM 13N (EPSG 32613) for this site. We can re-project the vector data so that both datasets align. Note that NEON is planning to update the CRS of the polygon data to match the AOP raster data, but this is not currently available (as of Spring 2024).
-
-``` {r reproject-crown-poly, results="hide"}
-rmnp_crown_poly_UTM13N <- project(rmnp_crown_poly, "EPSG:32613")
-```
-
-Let's plot the crown polygon data (orange line) along with the RGB reflectance image and tree location (red point).
+The crown polygon is in the same projection as the AOP reflectance data, so we can continue. Next let's plot the crown polygon data (orange line) along with the RGB reflectance image and tree location (red point).
 
 ``` {r plot-sample-with-crown-poly}
 plotRGB(rgb_rast,stretch='lin',xlim=x_sub,ylim=y_sub,axes=TRUE) # plot reflectance RGB raster data
 plot(tree_loc, col="red", add = T) # plot the location of the tree (red point)
-picol_crown_poly <- rmnp_crown_poly_UTM13N[rmnp_crown_poly_UTM13N$crownPolyg == "RMNP.04015.2020"]
+picol_crown_poly <- rmnp_crown_poly[rmnp_crown_poly$crownPolyg == "RMNP.04015.2020"]
 plot(picol_crown_poly, border = "orange", lwd = 2, add=T) # plot the tree crown polygon
 ```
 
@@ -499,7 +494,7 @@ spectra_crown_plot <- ggplot() +
 print(spectra_crown_plot + ggtitle("Spectra of PICOL Leaf Clip Sample & Corresponding Airborne Tree-Crown Pixels at RMNP"))
 ```
 
-Again we can see there is some discrepancy between the airborne and field spectra, and there is a decent amount of variation between the spectra of the pixels contained within the tree crown polygon. The leaf-clip spectra is one "end-member" that contributes to the 1-m pixel combined reflectance. The exploratory analysis demonstrated in this tutorial is an example of some steps you might take to get a feel for the data. We recommend you explore some other samples at this site, or field spectra data at another site, building off this R code to answer some questions you come up with as you start digging into the data.
+Again we can see there is some difference between the airborne and field spectra, and there is a decent amount of variation between the spectra of the pixels contained within the tree crown polygon. The leaf-clip spectra is one "end-member" that contributes to the 1-m pixel combined reflectance. The exploratory analysis demonstrated in this tutorial is an example of some steps you might take to get a feel for the data. We recommend you explore some other samples at this site, or field spectra data at another site, building off this R code to answer some questions you come up with as you start digging into the data.
 
 
 <div id="next-steps" markdown="1">
